--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "TravlingCoder",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
+    "node-cron": "^3.0.2",
     "pdf-to-printer": "^5.3.0",
     "puppeteer": "^16.1.0"
   }
